Bugfix: Palette don't get exported to the right location

BUG:461579